<resources>
    <string name="ok">OK</string>
    <string name="pick_input_method">Switch Input Method</string>
    <string name="input_method_handwriting_label">Handwriting</string>
    <string name="input_method_pinyin_label">Full Pinyin</string>
    <string name="input_method_latin_label">English</string>
    <string name="input_method_symbol_label">123</string>
    <string name="input_method_first_letter_label">Initial Pinyin</string>
    <string name="input_method_label">Method</string>
    <string name="input_method_handwriting_name">Handwriting</string>
    <string name="input_method_pinyin_name">Full Pinyin</string>
    <string name="input_method_latin_name">English</string>
    <string name="input_method_symbol_name">123</string>
    <string name="input_method_first_letter_name">Initial Pinyin</string>
    <string name="back_to_latin_keyboard">ABC</string>
    <string name="api_version">1.1.2000.0002</string>
    <string name="api_route_dir">./routes/</string>
    <string name="api_tts_res_file">./GNaviRes/Resource.irf</string>
    <string name="api_auto_register_active_code_file">./data/sn.dat</string>
    <string name="api_custom_traffic_data">1</string>
    <string name="route_on_deviate">您已偏航，正在为您重算引导路线</string>
    <string name="tts_role_xiaoyan">普通话女声</string>
    <string name="tts_role_xiaofeng">普通话男声</string>
    <string name="tts_role_catherine">英文女声</string>
    <string name="tts_role_john">英文男声</string>
    <string name="tts_role_xiaoqian">东北话女声</string>
    <string name="tts_role_xiaorong">四川话女声</string>
    <string name="tts_role_xiaomei">粤语女声</string>
    <string name="tts_role_xiaolin">台湾话女声</string>
    <string name="tts_role_xiaoqiang">湖南话男声</string>
    <string name="tts_role_xiaokun">河南话男声</string>
    <string name="format_distance_meter">%dm</string>
    <string name="format_distance_kilometer">%.1fkm</string>
    <string name="format_distance_kilometer_short">%.0fkm</string>
    <string name="format_short_time">%1$dh %2$dm</string>
    <string name="format_km_per_hour">%.1fkm/h</string>
    <string name="format_m_per_second">%.1fm/s</string>
    <string name="format_km_per_hour_short">%dkm/h</string>
    <string name="format_m_per_second_short">%dm/s</string>
    <string name="format_page_number">%1$d/%2$d</string>
    <string name="zero">0</string>
    <string name="custom">Custom</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="prompt">Prompt</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Agree</string>
    <string name="refuse">Disagree</string>
    <string name="time">Time</string>
    <string name="quit">Exit</string>
    <string name="go_back">Reverse Route</string>
    <string name="simple_chinese">简体中文</string>
    <string name="traditional_chinese">繁體中文</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="settings_data_dir" />
    <string name="settings_title_data_dir">Data Dir</string>
    <string name="settings_title_auto_save_settings">Auto Save Settings</string>
    <string name="settings_title_factory_settings">Factory Settings</string>
    <string name="settings_title_trace_log">Trace Log</string>
    <string name="settings_title_trace_location">Trace Location</string>
    <string name="settings_title_show_gps_location">Show GPS Location</string>
    <string name="settings_title_set_my_location_enabled">Set My Location</string>
    <string name="settings_title_repeat_simulation">Repeat Simulation</string>
    <string name="settings_title_gps_provider_unavailable">Disable GPS</string>
    <string name="common">Common</string>
    <string name="around">Nearby</string>
    <string name="label_auto">Auto</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_detailed">Detailed</string>
    <string name="label_normal">Normal</string>
    <string name="label_simple">Simple</string>
    <string name="label_frequently">Frequent</string>
    <string name="backToMap">CCP</string>
    <string name="app_name">高德导航</string>
    <string name="format_date">yyyy/MM/dd</string>
    <string name="format_time">HH:mm:ss</string>
    <string name="format_address">%1$s %2$s</string>
    <string name="pattern_expected_time">\#00</string>
    <string name="pattern_speed">0.0km/h</string>
    <string name="pattern_azimuth">0.0°</string>
    <string name="pattern_distance">0.0</string>
    <string name="title_detail_of_turning">Intersection Details</string>
    <string name="label_pre_road">Previous Road</string>
    <string name="label_next_road">Next Road</string>
    <string name="pre_intersection">Previous</string>
    <string name="next_intersection">Next</string>
    <string name="intersection_distance">Intersection Distance:</string>
    <string name="remaining_distance">Remaining Distance:</string>
    <string name="accident_type">Type:</string>
    <string name="address">Add:</string>
    <string name="delay">Delay:</string>
    <string name="event">Event:</string>
    <string name="unknow_road">unKnow road</string>
    <string name="demo_version">Test only ,not for sale!</string>
    <string name="test_words">Testing purpose only, not for sale</string>
    <string name="receiving_gps_signal">GPS searching…</string>
    <string name="shortcut">Freq.</string>
    <string name="search_around">Nearby</string>
    <string name="navigate_to">Dest.</string>
    <string name="pass_by">Waypoint</string>
    <string name="add_to_favorites">Save</string>
    <string name="operation_search_around">Nearby</string>
    <string name="country">China</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="whole_city">City</string>
    <string name="street">Street</string>
    <string name="route_compute_failed">Route calculation failure!</string>
    <string name="route_compute_canceled">Route calculation cancel!</string>
    <string name="invalid_route_point">Invalid waypoint,calculation failure!</string>
    <string name="route_too_short">Route too short</string>
    <string name="route_too_long">Route too long</string>
    <string name="route_computing">Calculating route, please wait…</string>
    <string name="stop_guidance">End Navigation</string>
    <string name="reset_route_point">Recalculate route</string>
    <string name="popup_cancel">Cancel</string>
    <string name="resume_pre_route">Resume previous route</string>
    <string name="resume_pre_route_failure">Resume Failure</string>
    <string name="route_correcting">Recalculating route, please wait…</string>
    <string name="route_correction_success">Recalculate route successfully, route changed</string>
    <string name="route_correction_failure">Recalculate route failed!</string>
    <string name="way_point_add_succ">waypoint %s add successfully!</string>
    <string name="all_way_point_add_succ">waypoint add successfully!</string>
    <string name="way_point">waypoint</string>
    <string name="invalid_way_point">Invalid waypoint!</string>
    <string name="way_point_add_failure">waypoint add failed</string>
    <string name="way_point_far_away_from_road">waypoint add failed, %s too far to road!</string>
    <string name="way_point_out_of_range">waypoint add failed, %s exceed the scope!</string>
    <string name="way_point_too_closed">waypoint add failed, %s too close!</string>
    <string name="way_point_unavailable">waypoint add failed, %s cannot be used</string>
    <string name="way_point_already_exists">waypoint add failed, %s already exists</string>
    <string name="route_point_unavailable">Route calculation failure, route point %s cannot be used</string>
    <string name="route_point_far_away_from_road">Route calculation failure, route point %s too far to road</string>
    <string name="route_point_out_of_range">Route calculation failure, route point %s exceed the scope!</string>
    <string name="route_point_too_closed">Route calculation failure, route point %s too close!</string>
    <string name="no_available_route_points">Route calculation failure, inviald route point</string>
    <string name="some_unavailable_route_point_ignored">some route points have been ignored!</string>
    <string name="tips_guidance_stopped">Navigation Finished!</string>
    <string name="route_point_too_closed_failed">waypoint too close,add failed！</string>
    <string name="minimize">Minimize</string>
    <string name="route_overview">View Route</string>
    <string name="start_navigation">Go</string>
    <string name="simulate_navigation">Sim.</string>
    <string name="detail_of_route">Details</string>
    <string name="detail_of_turning">Details of turning</string>
    <string name="delete_route">Delete</string>
    <string name="best_route">Recommend</string>
    <string name="highway_route">Highway</string>
    <string name="economic_route">Economic</string>
    <string name="shortest_route">Shortest</string>
    <string name="getting_route">Getting route information,please wait…</string>
    <string name="there_is_no_route">Hasnot set navigation route!</string>
    <string name="edit">Edit</string>
    <string name="confirm">Ok</string>
    <string name="label_default">Default</string>
    <string name="label_friend">Friend</string>
    <string name="label_catering">Catering</string>
    <string name="label_leisure">Leisure</string>
    <string name="label_shopping">Shopping</string>
    <string name="label_work">Work</string>
    <string name="title_warning">Warning</string>
    <string name="warning_step_one">1.</string>
    <string name="warning_step_one_content">The calculated route is for reference purpose. Please do not solely rely on our guidance.</string>
    <string name="warning_step_two">2.</string>
    <string name="warning_step_two_content">In order to avoid danger, please do not operate when driving.</string>
    <string name="warning_step_three">3.</string>
    <string name="warning_step_three_content">Please read the manual carefully.</string>
    <string name="warning_step_four">4.</string>
    <string name="warning_step_four_content">The developers manufacturers and sellers are not responsible for traffic accidents or any losses.</string>
    <string name="label_device_id">Device ID：</string>
    <string name="label_soft_version">Navigation Software Version:</string>
    <string name="label_map_version">Map Version:</string>
    <string name="label_active_code">Activation Code:</string>
    <string name="register">Register</string>
    <string name="hint_serial_num">Please input serial number!</string>
    <string name="hint_active_code">Please input activation code!</string>
    <string name="hint_install_code">After input full serial number then will show</string>
    <string name="label_serial_number">Serial Number:</string>
    <string name="label_install_code">Installation Code:</string>
    <string name="ver_info_china_map">China Navigation Electronic Map</string>
    <string name="ver_info_geography_sys">AutoNavi®Navigation Geographic Information System</string>
    <string name="ver_info_made_by_autonavi">Edited by AutoNavi Software Ltd</string>
    <string name="ver_info_publish_by">Published by SinoMaps Press</string>
    <string name="label_isbn">ISBN</string>
    <string name="label_review_code">Map Number:</string>
    <string name="label_kernel_version">Core Version:</string>
    <string name="label_dealer_version">Distributor Data Version：</string>
    <string name="autonavi_copyright">Copyright(C)2009-2014AutoNavi Software Ltd. All rights reserved.</string>
    <string name="custom_service_tel">Customer Service：4008100080</string>
    <string name="label_version_info_serial_number">Serial Number:</string>
    <string name="label_version_info_install_code">Installation Code:</string>
</resources>