<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_title_factory_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/settings_title_trace_log" android:key="trace_log" android:defaultValue="@bool/settings_trace_log" />
    <CheckBoxPreference android:title="@string/settings_title_trace_location" android:key="trace_location" android:defaultValue="@bool/settings_trace_location" />
    <CheckBoxPreference android:title="@string/settings_title_show_gps_location" android:key="show_gps_location" android:defaultValue="@bool/settings_show_gps_location" />
    <CheckBoxPreference android:title="@string/settings_title_set_my_location_enabled" android:key="set_my_location_enabled" android:defaultValue="@bool/settings_set_my_location_enabled" />
    <CheckBoxPreference android:title="@string/settings_title_repeat_simulation" android:key="repeat_simulation" android:defaultValue="@bool/settings_repeat_simulation" />
    <CheckBoxPreference android:title="@string/settings_title_gps_provider_unavailable" android:key="gps_provider_unavailable" android:defaultValue="@bool/settings_gps_provider_unavailable" />
</PreferenceScreen>