<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="2.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:id="@id/button_bar" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="25.0sp" android:id="@id/accept" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/accept" android:singleLine="true" android:layout_weight="1.0" />
        <Button android:id="@id/refuse" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/refuse" android:singleLine="true" android:layout_weight="1.0" />
        <CheckBox android:enabled="false" android:textColor="@color/bright_foreground_dark" android:id="@id/auto_enter_navi" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="false" android:button="@null" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:gravity="center_vertical" android:id="@id/warn_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/title_warning" android:drawableLeft="@drawable/ic_letter_to" android:drawablePadding="5.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/TextView.VersionInfo" />
    <ScrollView android:id="@id/warn_content_parent" android:background="@drawable/textfield_normal" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="10.0dip" android:layout_above="@id/button_bar" android:layout_below="@id/warn_title">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_one" style="@style/TextView.VersionInfo" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_one_content" android:lineSpacingExtra="10.0dip" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_two" style="@style/TextView.VersionInfo" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_two_content" android:lineSpacingExtra="10.0dip" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_three" style="@style/TextView.VersionInfo" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_three_content" android:lineSpacingExtra="10.0dip" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_four" style="@style/TextView.VersionInfo" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_step_four_content" android:lineSpacingExtra="10.0dip" style="@style/TextView.VersionInfo" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>