<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/gap_group" android:paddingRight="@dimen/gap_group" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ver_info_china_map" style="@style/TextView.VersionInfo" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ver_info_geography_sys" style="@style/TextView.VersionInfo" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:text="@string/label_isbn" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/map_isbn" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_review_code" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/map_num" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_map_version" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/text_map_data_version" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_soft_version" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/text_soft_version" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_kernel_version" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/text_kernel_version" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_dealer_version" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/text_dealer_version" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_version_info_serial_number" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/text_serial_number" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_version_info_install_code" style="@style/TextView.VersionInfo" />
                <TextView android:id="@id/text_install_code" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <TextView android:id="@id/text_version_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autonavi_copyright" style="@style/TextView.VersionInfo" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/ver_info_made_by_autonavi" style="@style/TextView.VersionInfo" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ver_info_publish_by" style="@style/TextView.VersionInfo" />
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/custom_service_tel" style="@style/TextView.VersionInfo" />
        </LinearLayout>
    </ScrollView>
    <View android:id="@id/factory_settings_switch" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_alignParentRight="true" />
    <android.gesture.GestureOverlayView android:id="@id/factory_settings_entrance" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>