<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/operation_bar_cursor" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/poi_browser_confirm" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/confirm" android:singleLine="true" android:drawableLeft="@drawable/ic_fav_editor_confirm" android:layout_weight="1.0" style="@style/Widget.Button.Operation" />
    <LinearLayout android:id="@id/operation_parent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="3.0">
        <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:splitMotionEvents="false">
            <Button android:id="@id/navigateTo" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/navigate_to" android:singleLine="true" android:drawableLeft="@drawable/ic_destination" android:layout_weight="1.0" style="@style/Widget.Button.Operation" />
            <Button android:id="@id/passBy" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/pass_by" android:singleLine="true" android:drawableLeft="@drawable/ic_pass_by" android:layout_weight="1.0" style="@style/Widget.Button.Operation" />
            <Button android:id="@id/searchAroundCursor" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/operation_search_around" android:singleLine="true" android:drawableLeft="@drawable/ic_search_around" android:layout_weight="1.0" style="@style/Widget.Button.Operation" />
            <Button android:id="@id/addToFavorites" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/add_to_favorites" android:singleLine="true" android:drawableLeft="@drawable/ic_favorite" android:layout_weight="1.0" style="@style/Widget.Button.Operation" />
            <Button android:id="@id/editFavorite" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/edit" android:singleLine="true" android:drawableLeft="@drawable/ic_edit_favorite" android:layout_weight="1.0" style="@style/Widget.Button.Operation" />
        </LinearLayout>
        <ImageButton android:id="@id/operation_bar_cursor_minimize" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:src="@drawable/ic_minimize" android:layout_weight="0.05" />
    </LinearLayout>
</LinearLayout>